--- a/style/style.css
+++ b/style/style.css
@@ -122,7 +122,8 @@ body{
 }
 
 .lvl-fill{
-    width: 5%;
+    width: 0%;
+    transition: all .2s ease;
     height: 100%;
     background: linear-gradient(120deg, #ADFAA1, #C597CC, #2F39A3);
 }
@@ -138,6 +139,12 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all .1s ease;
+
+
+    & img{
+        user-select: none;
+    }
 }
 
 .game-body-energy{
@@ -171,5 +178,24 @@ body{
         height: 50px;
         justify-content: space-between;
         color: white;
+    }
+}
+.tap-active{
+    transform: skew(5deg) scale(1.05); 
+}
+
+.cost{
+    animation: taping 1s 1 linear;
+    position: absolute;
+}
+
+@keyframes taping{
+    0% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    100%{
+        transform: translateY(-100px);
+        opacity: 0;
     }
 }
