--- a/style/style.css
+++ b/style/style.css
@@ -180,10 +180,49 @@ body{
         color: white;
     }
 }
+
+#hamster-skin{
+    width: 170px;
+}
 .tap-active{
     transform: skew(5deg) scale(1.05); 
 }
 
+.hidden{
+    display: none !important;
+}
+
+.game-body-market{
+    width: 400px;
+    padding: 10px;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    height: 65%;
+}
+.marked-card{
+    width: 180px;
+    height: 108px;
+    background: #32363C;
+    border-radius: 30px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 0.8rem;
+}
+
+.card-top,.card-bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.card-top{
+    border-bottom: 1px solid gray;
+}
 .cost{
     animation: taping 1s 1 linear;
     position: absolute;
