--- a/style/style.css
+++ b/style/style.css
@@ -17,14 +17,16 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
+ 
 }
 
 .game{
-    height: 100%;
+    min-height: 100vh;
     width: 428px;
     border-radius: 50px;
     background: #2C2F35;
-    overflow: hidden;
+    
+    
 }
 
 .game-head{
@@ -243,5 +245,12 @@ body{
     .game{
         width: 100vw;
         min-height: 100vh;
+        overflow-y: scroll;
     }
+
+    .game-container{
+        overflow-y: scroll;
+        min-height: 100vh;
+    }
+
 }
